--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -2,5 +2,6 @@ extends layout
 
 block body
   div.hide-intro
-    p.
-      Isn't this a cool site?
+    p
+      | See a demo:
+      a(href="/#e11f7561db351920099f65324dfe77275bd6e5db") The Angular Material demos
