--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -1,7 +1,8 @@
 extends layout
 
 block body
-  div.hide-intro
+  script(src='/bundle.js')
+  #main-content.hide-intro
     p
       | See a demo:
       a(href="/#e11f7561db351920099f65324dfe77275bd6e5db") The Angular Material demos
