Remove iframe and switch to separate tab

--- a/css/main.styl
+++ b/css/main.styl
@@ -1,11 +1,2 @@
-html, body
-  margin: 0
-  padding: 0
-  height: 100%
-  overflow: hidden
-
-.hide-intro
-  display: none
-
-iframe
-  border: none
+#location
+	width: 30%
