--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -1,8 +1,9 @@
 extends layout
 
 block body
-  script(src='/bundle.js')
-  #main-content.hide-intro
+  #main-content
     p
-      | See a demo:
-      a(href="/#e11f7561db351920099f65324dfe77275bd6e5db") The Angular Material demos
+      | Open a site:
+      input#location(type='text', value='e11f7561db351920099f65324dfe77275bd6e5db')
+      input#go-button(type='button', value='Go!', disabled)
+  script(src='/bundle.js')
