Add heartbeat for improved reliability

--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -6,4 +6,6 @@ block body
       | Open a site:
       input#location(type='text', value='e11f7561db351920099f65324dfe77275bd6e5db')
       input#go-button(type='button', value='Go!', disabled)
+    P
+      | Leave this page open while browsing!
   script(src='/bundle.js')
