--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -1,11 +1,21 @@
 extends layout
 
 block body
-  #main-content
-    p
-      | Open a site:
-      input#location(type='text', value='e11f7561db351920099f65324dfe77275bd6e5db')
-      input#go-button(type='button', value='Go!', disabled)
-    P
-      | Leave this page open while browsing!
-  script(src='/bundle.js')
+	h1.header
+		| PeerCloud: The Serverless Web
+	#main-content
+		p.
+			Paste a site infohash below to open a specific site, or leave the default to
+			open an example image gallery. Please #[strong be patient] since it may take a
+			while for the site to appear.
+		form
+			input#location(type='text', value='e11f7561db351920099f65324dfe77275bd6e5db')
+			input#go-button(type='submit', value='Go!', disabled)
+		p.
+			You #[strong must] leave this page open while browsing! This is because Chrome
+			doesn't support WebRTC from service workers. There is
+			#[a(href='https://code.google.com/p/chromium/issues/detail?id=302019') a bug]
+			open about this on the chromium bug tracker.
+	p.footer
+		| Code available #[a(href='https://github.com/jhiesey/peercloud') on GitHub]
+	script(src='/bundle.js')
